# MAFE

./: .gitignore  LICENSE  README.md
gpr_shared_frequency_model/: CMakeLists.txt  README.md  README_zh.md  package.xml
gpr_shared_frequency_model/config/: train_params_current_3peak.yaml  train_params_excel_4peak_template.yaml  train_params_template_4peak.yaml
gpr_shared_frequency_model/examples/: example_from_uploaded_excel_15rows.csv  publish_test_speed.sh  updated_database_from_uploaded_excel.csv
gpr_shared_frequency_model/include/gpr_shared_frequency_model/: csv_utils.hpp  gpr1d_matern.hpp
gpr_shared_frequency_model/launch/: predict_shared_gpr.launch  train_shared_gpr.launch
gpr_shared_frequency_model/scripts/: train_from_xlsx.sh  xlsx_to_csv.py
gpr_shared_frequency_model/src/: predict_shared_gpr_node.cpp  train_shared_gpr_node.cpp
imu_spectrum_gaussian_fit_cn_annotated/: CMakeLists.txt  README.md  README_zh.md  package.xml
imu_spectrum_gaussian_fit_cn_annotated/config/: fit_params.yaml
imu_spectrum_gaussian_fit_cn_annotated/docs/: code_annotation_zh.md
imu_spectrum_gaussian_fit_cn_annotated/examples/: example_imu_200hz_6cols.csv  run_example.md
imu_spectrum_gaussian_fit_cn_annotated/include/imu_spectrum_gaussian_fit/: csv_reader.hpp  fft_spectrum.hpp  gaussian_peak_fitter.hpp  io_utils.hpp  svg_plotter.hpp
imu_spectrum_gaussian_fit_cn_annotated/launch/: fit_imu_gaussian.launch
imu_spectrum_gaussian_fit_cn_annotated/scripts/: generate_example_imu_csv.py
imu_spectrum_gaussian_fit_cn_annotated/src/: imu_gaussian_fit_node.cpp
pose_to_virtual_imu_package/: README.md  README_zh.md
pose_to_virtual_imu_package/matlab/: pose_to_virtual_imu_from_csv_2016a.m  run_pose_to_virtual_imu_example.m
pose_to_virtual_imu_package/ros_pose_to_virtual_imu/: CMakeLists.txt  package.xml
pose_to_virtual_imu_package/ros_pose_to_virtual_imu/config/: pose_to_virtual_imu.yaml
pose_to_virtual_imu_package/ros_pose_to_virtual_imu/launch/: pose_to_virtual_imu.launch
pose_to_virtual_imu_package/ros_pose_to_virtual_imu/src/: pose_to_virtual_imu_node.cpp
